name:                elpa2nix
version:             0.1.0.0
synopsis:            Automatically generate Nix expressions for Emacs packages
homepage:            http://github.com/ttuegel/elpa2nix
license:             GPL-3
license-file:        LICENSE
author:              Thomas Tuegel
maintainer:          ttuegel@gmail.com
copyright:           (c) 2015 Thomas Tuegel
category:            Distribution
build-type:          Simple
cabal-version:       >=1.10
data-dir: data/
data-files: elpa2json.el

executable elpa2nix
  main-is: elpa2nix.hs
  other-modules: Paths_elpa2nix
  build-depends:
      base >= 4.7 && < 5
    , aeson == 0.8.*
    , async == 2.0.*
    , base32-bytestring == 0.2.*
    , bytestring == 0.10.*
    , containers ==0.5.*
    , filepath == 1.3.*
    , http-client == 0.4.*
    , process == 1.2.*
    , SHA == 1.6.*
    , temporary == 1.2.*
    , text == 1.2.*
  default-language:    Haskell2010
  ghc-options: -Wall