name:                elpa2nix
version:             0.1.0.0
synopsis:            Automatically generate Nix expressions for Emacs packages
homepage:            http://github.com/ttuegel/elpa2nix
license:             GPL-3
license-file:        LICENSE
author:              Thomas Tuegel
maintainer:          ttuegel@gmail.com
copyright:           (c) 2015 Thomas Tuegel
category:            Distribution
build-type:          Simple
cabal-version:       >=1.10
data-dir: data/
data-files: elpa2json.el

library
  exposed-modules:
    Distribution.Elpa.Package
    Distribution.Nix.Package
  hs-source-dirs: src
  build-depends:
      base >= 4.7 && < 5
    , aeson == 0.8.*
    , containers == 0.5.*
    , text == 1.2.*
  default-language: Haskell2010
  ghc-options: -Wall

executable elpa2nix
  main-is: elpa2nix.hs
  other-modules:
    Paths_elpa2nix
  build-depends:
      base >= 4.7 && < 5
    , aeson
    , aeson-pretty >= 0.7.2 && < 1
    , async == 2.0.*
    , bytestring == 0.10.*
    , containers
    , elpa2nix
    , filepath >= 1.3 && < 2
    , http-streams == 0.8.*
    , io-streams == 1.3.*
    , optparse-applicative == 0.11.*
    , process == 1.2.*
    , temporary == 1.2.*
    , text
  default-language: Haskell2010
  ghc-options: -Wall -threaded -with-rtsopts=-N