name:                emacs2nix
version:             0.1.0.0
synopsis:            Automatically generate Nix expressions for Emacs packages
description:
  melpa2nix automatically generates Nix expressions for Emacs packages from the
  package recipes provided by MELPA.
  .
  elpa2nix automatically generates Nix expressions for Emacs packages from ELPA.
license:             GPL-3
license-file:        LICENSE
author:              Thomas Tuegel
maintainer:          ttuegel@gmail.com
copyright:           2015 Thomas Tuegel
category:            Distribution
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
data-dir: scripts
data-files: *.el, *.sh

library
  exposed-modules:
    Distribution.Elpa.Package
    Distribution.Melpa
    Distribution.Melpa.Recipe
    Distribution.Nix.Fetch
    Distribution.Nix.Hash
    Distribution.Nix.Name
    Distribution.Nix.Package.Elpa
    Distribution.Nix.Package.Melpa
    Distribution.Nix.Pretty
    Util
  other-modules:
    Paths_emacs2nix
  hs-source-dirs: src
  build-depends:
      base >= 4.7 && < 5
    , aeson >= 0.8
    , async >= 2.0
    , attoparsec >= 0.13
    , bytestring >= 0.10
    , containers >= 0.5
    , directory >= 1.2
    , errors >= 2
    , filepath >= 1.3
    , io-streams >= 1.3
    , temporary >= 1.2
    , text >= 1.2
    , text-regex-replace == 0.1.*
    , transformers >= 0.4
    , unordered-containers >= 0.2
    , wl-pprint-text >= 1.1
  default-language: Haskell2010
  ghc-options: -Wall

executable melpa2nix
  main-is: melpa2nix.hs
  build-depends:
      base
    , aeson
    , aeson-pretty >= 0.7.2 && < 1
    , containers
    , directory
    , filepath
    , io-streams
    , emacs2nix
    , optparse-applicative >= 0.11
    , text
    , unordered-containers
    , wl-pprint-text
  default-language: Haskell2010
  ghc-options: -Wall -threaded

executable elpa2nix
  main-is: elpa2nix.hs
  other-modules:
    Paths_emacs2nix
  build-depends:
      base
    , aeson
    , aeson-pretty >= 0.7.2 && < 1
    , async
    , bytestring
    , containers
    , emacs2nix
    , errors
    , filepath
    , io-streams
    , optparse-applicative >= 0.11
    , temporary == 1.2.*
    , text
    , transformers >= 0.4
    , wl-pprint-text
  default-language: Haskell2010
  ghc-options: -Wall -threaded -with-rtsopts=-N