name:                emacs2nix
version:             0.1.0.0
synopsis:            Generate Nix expressions for Emacs packages
description:
  melpa2nix automatically generates Nix expressions for Emacs packages from the
  package recipes provided by MELPA.
  .
  elpa2nix automatically generates Nix expressions for Emacs packages from ELPA.
license:             GPL-3
license-file:        LICENSE
author:              Thomas Tuegel
maintainer:          ttuegel@gmail.com
copyright:           (C) 2016 Thomas Tuegel
category:            Distribution
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
data-dir: scripts/
data-files: *.el

library
  exposed-modules:
    Distribution.Bzr
    Distribution.Elpa
    Distribution.Emacs.Name
    Distribution.Git
    Distribution.Hg
    Distribution.Melpa
    Distribution.Melpa.Fetcher
    Distribution.Melpa.Melpa
    Distribution.Melpa.PkgInfo
    Distribution.Nix.Builtin
    Distribution.Nix.Exception
    Distribution.Nix.Fetch
    Distribution.Nix.Hash
    Distribution.Nix.Index
    Distribution.Nix.Name
    Distribution.Nix.Package.Elpa
    Distribution.Nix.Package.Melpa
    Distribution.SVN
    Exceptions
    Process
  other-modules:
    Paths_emacs2nix
  hs-source-dirs: src
  build-depends:
      base >= 4.7 && < 5
    , aeson >= 0.8
    , ansi-wl-pprint >= 0.6
    , async >= 2.0
    , attoparsec >= 0.13
    , bytestring >= 0.10
    , containers >= 0.5
    , data-fix >= 0.0.1
    , directory >= 1.2
    , errors >= 2
    , filepath >= 1.3
    , hashable >= 1.2
    , hnix
    , http-streams >= 0.7.2.0
    , io-streams >= 1.3
    , scientific >= 0.3
    , taggy >= 0.2.0
    , temporary >= 1.2
    , text >= 1.2
    , time
    , transformers >= 0.4
    , unordered-containers >= 0.2
  default-language: Haskell2010
  ghc-options: -Wall

executable melpa2nix
  main-is: melpa2nix.hs
  build-depends:
      base
    , aeson
    , containers
    , directory
    , filepath
    , io-streams
    , emacs2nix
    , optparse-applicative >= 0.11
    , text
    , unordered-containers
  default-language: Haskell2010
  ghc-options: -Wall -threaded

executable elpa2nix
  main-is: elpa2nix.hs
  other-modules:
    Paths_emacs2nix
  build-depends:
      base
    , aeson
    , async
    , bytestring
    , containers
    , directory >= 1.2
    , emacs2nix
    , errors
    , filepath
    , hnix
    , io-streams
    , optparse-applicative >= 0.11
    , temporary == 1.2.*
    , text
    , transformers >= 0.4
    , unordered-containers
  default-language: Haskell2010
  ghc-options: -Wall -threaded -with-rtsopts=-N