name:                melpa2nix
version:             0.1.0.0
synopsis:            Automatically generate Nix expressions for Emacs packages
description:
  melpa2nix automatically generates Nix expressions for Emacs packages from the
  package recipes provided by MELPA.
license:             GPL-3
license-file:        LICENSE
author:              Thomas Tuegel
maintainer:          ttuegel@gmail.com
copyright:           2015 Thomas Tuegel
category:            Distribution
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
data-dir: scripts
data-files: *.el, *.sh

library
  exposed-modules:
    Distribution.Melpa
    Distribution.Melpa.Fetcher
    Distribution.Melpa.Fetcher.Bzr
    Distribution.Melpa.Fetcher.CVS
    Distribution.Melpa.Fetcher.Darcs
    Distribution.Melpa.Fetcher.Fossil
    Distribution.Melpa.Fetcher.Git
    Distribution.Melpa.Fetcher.GitHub
    Distribution.Melpa.Fetcher.Hg
    Distribution.Melpa.Fetcher.SVN
    Distribution.Melpa.Fetcher.Wiki
    Distribution.Melpa.Files
    Distribution.Melpa.Package
    Distribution.Melpa.Recipe
  other-modules:
    Paths_melpa2nix
  hs-source-dirs: src
  build-depends:
      base >=4.7 && <4.9
    , aeson >= 0.8
    , async >= 2.0
    , attoparsec >= 0.13
    , bytestring >= 0.10
    , containers >= 0.5
    , directory >= 1.2
    , errors >= 1.4 && < 2
    , filepath >= 1.4
    , io-streams >= 1.3
    , temporary >= 1.2
    , text >= 1.2
    , transformers >= 0.4
    , unordered-containers >= 0.2
  default-language: Haskell2010
  ghc-options: -Wall

executable melpa2nix
  main-is: melpa2nix.hs
  build-depends:
      base
    , aeson-pretty >= 0.7.2
    , containers
    , directory
    , filepath
    , io-streams
    , melpa2nix
    , optparse-applicative >= 0.11
    , text
    , unordered-containers
  default-language: Haskell2010
  ghc-options: -Wall -threaded